# ChangeLog for dev-texlive/texlive-langlatin
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langlatin/ChangeLog,v 1.50 2012/07/27 02:33:15 aballier Exp $

*texlive-langlatin-2012 (27 Jul 2012)

  27 Jul 2012; Alexis Ballier <aballier@gentoo.org>
  +texlive-langlatin-2012.ebuild:
  Bump to TeX Live 2012.

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  texlive-langlatin-2011.ebuild:
  keyword ~amd64-fbsd

  09 May 2012; Alexis Ballier <aballier@gentoo.org>
  -texlive-langlatin-2010.ebuild:
  remove old

  06 May 2012; Raúl Porcel <armin76@gentoo.org> texlive-langlatin-2011.ebuild:
  ia64/s390/sh/sparc stable wrt #395735

  04 Mar 2012; Tobias Klausmann <klausman@gentoo.org>
  texlive-langlatin-2011.ebuild:
  Stable on alpha, bug #395735

  03 Mar 2012; Brent Baude <ranger@gentoo.org> texlive-langlatin-2011.ebuild:
  Marking texlive-langlatin-2011 ppc64 stable for bug 395735

  02 Mar 2012; Brent Baude <ranger@gentoo.org> texlive-langlatin-2011.ebuild:
  Marking texlive-langlatin-2011 ppc stable for bug 395735

  29 Jan 2012; Markus Meier <maekke@gentoo.org> texlive-langlatin-2011.ebuild:
  arm stable, bug #395735

  17 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  texlive-langlatin-2011.ebuild:
  x86 stable wrt bug #395735

  16 Jan 2012; Agostino Sarubbo <ago@gentoo.org> texlive-langlatin-2011.ebuild:
  Stable for amd64, wrt bug #395735

  28 Dec 2011; Jeroen Roovers <jer@gentoo.org> texlive-langlatin-2011.ebuild:
  Stable for HPPA (bug #395735).

  05 Oct 2011; Alexis Ballier <aballier@gentoo.org>
  -texlive-langlatin-2008.ebuild, -texlive-langlatin-2009.ebuild:
  remove old

  04 Oct 2011; Jeroen Roovers <jer@gentoo.org> texlive-langlatin-2010.ebuild:
  Stable for HPPA (bug #355085).

  18 Sep 2011; Raúl Porcel <armin76@gentoo.org> texlive-langlatin-2010.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #355085
