@@ -1,6 +1,9 @@
 # ChangeLog for dev-texlive/texlive-langlatin
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langlatin/ChangeLog,v 1.50 2012/07/27 02:33:15 aballier Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-texlive/texlive-langlatin/ChangeLog,v 1.51 2013/04/17 15:13:19 jer Exp $
+
+  17 Apr 2013; Jeroen Roovers <jer@gentoo.org> texlive-langlatin-2012.ebuild:
+  Stable for HPPA (bug #449298).
 
 *texlive-langlatin-2012 (27 Jul 2012)
 
